blog edit editor overflow fixed

--- a/src/app/(protected)/projects/[projectId]/blogs/components/editor/editor.module.scss
+++ b/src/app/(protected)/projects/[projectId]/blogs/components/editor/editor.module.scss
@@ -1,7 +1,7 @@
 @use "/src/styles/abstract" as ab;
 
 .blogEditor {
-	// overflow: hidden;
+	overflow: auto;
 	&[data-hidden="true"] {
 		display: none;
 	}
